interests partially added

--- a/index.html
+++ b/index.html
@@ -21,14 +21,17 @@
 <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
 
 <link rel="stylesheet" type="text/css" href="styles/styles.css">
+<link rel="stylesheet" type="text/css" href="styles/styles2.css">
 <script type="text/javascript" src="scripts/script.js"></script>
+<script type="text/javascript" src="scripts/script2.js"></script>
 <script type="text/javascript" src="external/anime.min.js"></script>
 <link rel="icon" type="image/png" href="imgs/down.png">
 
 </head>
 <body>
 <div class="container-main main conainter-fluid">
-
+<!-------------------------------------------------------- action bars statrs here ------------------------------------------>
+<div class="action_bars">
 <div class="row">
 <section class="action_bar col-md-12">
 <div class="action_bar_item"><img class="action_bar_pro_pic img-responsive rounded-circle" src="imgs/img.png" alt="Pawan Kumar Dinodia Profile Pic"><div class="fixed_action_bar_title">Pawan Kumar
@@ -46,6 +49,7 @@
 </ul></div>
 </section>
 </div>
+
 <div class="row">
 <section class="action_bar_fixed col-xl-12">
 <div class="action_bar_item"><img class="action_bar_pro_pic img-responsive rounded-circle" src="imgs/img.png" alt="Pawan Kumar Dinodia Profile Pic"><div class="fixed_action_bar_title">Pawan Kumar</div>
@@ -60,49 +64,114 @@
 </ul></div>
 </section>
 </div>
+<!-------------------------------------------------------- action bars ends here ------------------------------------------>
+</div>
 
 <div class="contents main_container">
-<div class="row">
-<section class="intro col-xl-12">
+
+  <!-------------------------------------------------------- Intro start here ------------------------------------------>
+<section class="row">
+<div class="intro col-md-10">
 <div class="intro_profile_pic col-md-4"><img class="pro_pic img-responsive rounded-circle" src="imgs/img.png" alt="Pawan Kumar Dinodia Profile Pic">
 </div><div class="col-md-7" id="typed-strings">Hi, I am <br><a href="javascript:void(0);"><span id="typed"></a></span>
 </div><div class="intro_profile_content"><div id="intro_content" class="intro_content col-md-12">I am a technology enthusiast and lover of nature. I am a geek kind of person and love to spend time learning computer programming and solving problems. I have sound knowlege of programming in Python, Java, Android and web based technologies like HTML, Javascript, CSS including modern standard libraries like jquery, Bootstrap <a href="javascript:void(0);" target="_blank">(See more)</a>. I have good knowledge of <a href="javascript:void(0);" target="_blank">Medical devices</a> and topics like Universal Health coverage, patient safety, <a href="javascript:void(0);" target="_blank">medical device regulation</a> and <a href="javascript:void(0);" target="_blank">software in medical devices</a> attracts me a lot <a href="javascript:void(0);" target="_blank">(know more)</a>. I am very fond of traveling and love to travel on cold and hilly areas.<br></div></div>
 <div class="social_links col-xl-12">
 <a href="https://www.facebook.com/pawan.dinodia.923" target="_blank"><img src="imgs/fb.png" class="social_links_img facebook" alt="https://www.facebook.com/pawan.dinodia.923"></a><a href="https://twitter.com/pawan_dinodia" target="_blank" alt="https://twitter.com/pawan_dinodia"><img src="imgs/twitter.png" class="social_links_img twitter"></a><a href="https://www.linkedin.com/in/pawandinodiabme/" target="_blank"><img src="imgs/linkedin.png" class="social_links_img instagram" alt="https://www.linkedin.com/in/pawandinodiabme/"></a><a href="https://www.instagram.com/pawan.dinodia/" target="_blank"><img src="imgs/instagram.png" class="social_links_img codepen" alt="https://www.instagram.com/pawan.dinodia/"></a><a href="https://github.com/pawandinodia" target="_blank"><img src="imgs/github.png" class="social_links_img linkedin" alt="https://github.com/pawandinodia"></a><a href="https://codepen.io/pawandinodia/" target="_blank"><img src="imgs/codepen.png" class="social_links_img github" alt="https://codepen.io/pawandinodia/"></a>
 </div>
-</section>
-<section class="interests col-md-12">
-<p id="interest_heading">My Interests</p>
-<table class="interests_row">
-<cols>
-<col width="6%" />
-<col width="25%" />
-<col width="6%" />
-<col width="25%" />
-<col width="6%" />
-<col width="25%" />
-<col width="6%" />
-</cols>
-<tr><td>
-</td><td class="interest_image">
-<div class="interest_image" id="interest_human" style="display:inline-block;"><img class="img-responsive rounded-circle" src="imgs/interests_human.png" alt="Interest animation"></div>
-</td><td>
-<div class="interest_math" style="display:inline-block;">+</div>
-</td><td class="interest_image">
-<div class="interest_image" id="interests_computer" style="display:inline-block;"><img class="img-responsive rounded-circle" src="imgs/interests_computer.png" alt="Interest animation"></div>
-</td><td colspan="1">
-<div class="interest_math" style="display:inline-block;">=</div>
-</td><td class="interest_image">
-<div class="interest_image" id="bionic" style="display:inline-block;"><img class="img-responsive rounded-circle" src="imgs/bionic.png" alt="Interest animation"></div>
-</td><td>
-</td>
-</tr></table>
+</div>
+  <!-------------------------------------------------------- Intro ends here ------------------------------------------>
 </section>
 
-<section class="footer col-sm-12">
-<div class="footer_left_text"><p>© 2021 all rights reserved.</p></div><div class="footer_right_text" style="text-align: right;"><p>Hard-coded and hand-crafted with <img src="imgs/love.png" class="social_links_img social_links_love" alt="Love"></p></div>
+
+    <!-------------------------------------------------------- Interests start here ------------------------------------------>
+<section class="row"><div class="intro col-md-10">
+       <section class="page-section portfolio" id="portfolio">
+            <div class="container">
+                <!-- Portfolio Section Heading-->
+                <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Research interests</h2>
+                <!-- Icon Divider-->
+                <div class="divider-custom">
+                    <div class="divider-custom-line"></div>
+                    <div class="divider-custom-line"></div>
+                </div><br><br>
+                <h3>Though, I have interests in all aspects of medical devices, my main interest lies in following areas of biomedical engineering:</h3><br><br>
+                <!-- Portfolio Grid Items-->
+                <div class="row justify-content-center">
+                    <!-- Portfolio Item 1-->
+                    <div class="col-md-6 col-lg-4 mb-5">
+                        <div class="portfolio-item mx-auto" data-bs-toggle="modal" data-bs-target="#portfolioModal1">
+                            <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                                <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
+                            </div>
+                            <img class="img-fluid intrest_img" src="imgs/artificialMcsl.gif" alt="..." />
+                        </div>
+                    </div>
+                    <!-- Portfolio Item 2-->
+                    <div class="col-md-6 col-lg-4 mb-5">
+                        <div class="portfolio-item mx-auto" data-bs-toggle="modal" data-bs-target="#portfolioModal2">
+                            <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                                <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
+                            </div>
+                            <img class="img-fluid intrest_img" src="imgs/robotics.gif" alt="..." />
+                        </div>
+                    </div>
+                    <!-- Portfolio Item 3-->
+                    <div class="col-md-6 col-lg-4 mb-5">
+                        <div class="portfolio-item mx-auto" data-bs-toggle="modal" data-bs-target="#portfolioModal3">
+                            <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                                <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
+                            </div>
+                            <img class="img-fluid intrest_img" src="imgs/regulation.jpeg" alt="..." />
+                        </div>
+                    </div>
+                    <!-- Portfolio Item 4-->
+                    <div class="col-md-6 col-lg-4 mb-5 mb-lg-0">
+                        <div class="portfolio-item mx-auto" data-bs-toggle="modal" data-bs-target="#portfolioModal4">
+                            <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                                <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
+                            </div>
+                            <img class="img-fluid intrest_img" src="imgs/game.png" alt="..." />
+                        </div>
+                    </div>
+                    <!-- Portfolio Item 5-->
+                    <div class="col-md-6 col-lg-4 mb-5 mb-md-0">
+                        <div class="portfolio-item mx-auto" data-bs-toggle="modal" data-bs-target="#portfolioModal5">
+                            <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                                <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
+                            </div>
+                            <img class="img-fluid intrest_img" src="imgs/safe.png" alt="..." />
+                        </div>
+                    </div>
+                    <!-- Portfolio Item 6-->
+                    <div class="col-md-6 col-lg-4">
+                        <div class="portfolio-item mx-auto" data-bs-toggle="modal" data-bs-target="#portfolioModal6">
+                            <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                                <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
+                            </div>
+                            <img class="img-fluid intrest_img" src="imgs/submarine.png" alt="..." />
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+      </div>
+    <!-------------------------------------------------------- Interests ends here ------------------------------------------>
 </section>
+
+
 </div>
+
+      <!-------------------------------------------------------- Footer starts here ------------------------------------------>
+<section class="row">
+<div class="footer col-sm-12">
+<div class="footer_left_text"><p>© 2021 all rights reserved.</p></div><div class="footer_right_text" style="text-align: right;"><p>Hard-coded and hand-crafted with <img src="imgs/love.png" class="social_links_img social_links_love" alt="Love"></p></div>
+</div>
+      <!-------------------------------------------------------- Footer ends here ------------------------------------------>
+</section>
+
+</div>
+</div>
+
 <script>
   var typed = new Typed('#typed', {
     strings: ['Pawan Kumar.', 'Biomedical Engineer.'],
@@ -114,5 +183,17 @@
     backDelay: 1000
   });
 </script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
+
+i<!-- 
+
+illness 
+Photo by <a href="https://unsplash.com/@babydog50?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">HH E</a> on <a href="https://unsplash.com/s/photos/illness?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
+  
+
+http://instant-eyedropper.com/info/html_color_code/
+
+   -->
